# X_bot

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: bot.yml  price-report.yml  whale-alert.yml
src/x_bot/: __init__.py  config.py  main.py  twitter_client.py
src/x_bot/features/: __init__.py  price_report.py  whale_alert.py
src/x_bot/services/: __init__.py  blockchain.py  coingecko.py
tests/: test_price_report.py  test_whale_alert.py
